<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, CalcActivity!</string>
    <string name="app_name">Calculator</string>
<string name="copyright">Calculator   Copyright Reserved @俞俊</string>
<string name="zero">0</string>
<string name="inverse">1/x</string>
<string name="factorial">x!</string>
<string name="sin">sin</string>
<string name="sinh">sinh</string>
<string name="rad">Rad</string>
<string name="leftBracket">(</string>
<string name="square">x²</string>
<string name="sqrt">√</string>
<string name="cos">cos</string>
<string name="cosh">cosh</string>
<string name="pi">π</string>
<string name="rightBracket">)</string>
<string name="cube">x³</string>
<string name="nsqrt">x√y</string>
<string name="tan">tan</string>
<string name="tanh">tanh</string>
<string name="mod">%</string>
<string name="power">y^x</string>
<string name="log">log</string>
<string name="ln">ln</string>
<string name="e">e^x</string>
<string name="rand">Rand</string>
<string name="_2nd">2nd</string>
<string name="EE">EE</string>
<string name="pm">+/-</string>
<string name="plus">+</string>
<string name="minus">-</string>
<string name="multi">*</string>
<string name="divide">/</string>
<string name="_1">1</string>
<string name="_2">2</string>
<string name="_3">3</string>
<string name="_4">4</string>
<string name="_5">5</string>
<string name="_6">6</string>
<string name="_7">7</string>
<string name="_8">8</string>
<string name="_9">9</string>
<string name="_0">0</string>
<string name="C">C</string>
<string name="dot">.</string>
<string name="equal">=</string>
<string name="back">←</string>
</resources>
